2.opção-ingress-controle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress # primerira mudança
  annotations:  # criação de regra de rota 
    nginx.ingress.kubernetes.io/rewrite-target: / # outra mudança
  # namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http: 
      paths:
      - path: /blue # outra mudança
        pathType: Prefix
        backend:
          service:
            name: web-blue
            port:
              number: 80                  
      - path: /green  # outra mudança
        pathType: Prefix
        backend:
          service:
            name: web-green
            port:
              number: 80                  



# Acesso app : http://127.0.0.1.nip.io/green   ou  http://127.0.0.1.nip.io/blue         

# lista qual ingress class 

# kubectl get ingressclass
